--- a/css/stylesheetform.css
+++ b/css/stylesheetform.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: rgb(14, 1, 14);
-    background-image: url(../img/.png)
+    background-image: src:(/img/.png)
 
 }
 
